# historicon

./: .gitignore  CLAUDE.md  README.md  config.json  config.py  create_embeddings.py  docker-compose.yml  download_patreon.py  podcast_info.json  preprocess_transcripts.py  pyproject.toml  pytest.ini  run_pipeline.py  transcribe_deepgram.py
.github/: copilot-instructions.md
agents/: README.md  __init__.py  _utils.py  config.py  guardrails.py  guardrails_server.py  logfire_setup.py  mcp_server.py  models.py  otel_setup.py  retrieval.py  web_orchestrator.py
evals/: __init__.py  conftest.py  eval_failure_modes.py  eval_guardrails.py  eval_orchestrator.py  eval_retrieval.py
instructions/: retrieval.txt  web_orchestrator.txt
openwebui/: README.md  export_filter.py  function-historicon_filter_py-export-1779196767276.json  historicon_filter.json  historicon_filter.py  system_prompt.md
scripts/: create_embeddings.py  download_patreon.py  preprocess_transcripts.py  transcribe_deepgram.py  vad_transcribe.py
tests/: __init__.py  conftest.py  test_create_embeddings.py  test_guardrails.py  test_guardrails_server.py  test_integration.py  test_mcp_server.py  test_preprocess_transcripts.py  test_retrieval.py  test_web_orchestrator.py
transcripts/: (Corrected_Audio)_Γ._Κοσκωτάς_Το_σκάνδαλο_που_συγκλόνισε_την_Ελλάδα.txt  02._Υποσημείωση_Kim_Alexis_Trump_και_life-coaching.txt  1821_Η_επανάσταση_των_fake_news.txt  2023_Rewind.txt  214._Τα_δύο_αδέλφια_σε_ένα_παπούτσι.txt  215._To_πρώτο_cancel_της_Κυπριακής_τηλεόρασης.txt  217._Ιστορία_της_Μαφίας_Lucky_Luciano.txt  218._Ιστορία_της_Μαφίας_Frank_Costello_o_Πρωθυπουργός.txt  219._Ιστορία_της_Μαφίας_Η_δίκη_της_Επιτροπής.txt  220._Ιστορία_της_Μαφίας_John_Gotti_o_Teflon_Don.txt  221._Κύπρος_και_ο_πόλεμος_των_Λομβαρδών_(Guest_Storyteller_Antonis_Leontiou_Part_1).txt  222._Ο_πόλεμος_των_Λομβαρδών_Η_Αυτοκρατορία_αντεπιτίθεται_(_Guest_Storyteller_Antonis_Leontiou_Part_2).txt  223._Η_ιστορία_της_μάγισσας_Μπελ_(Live_Moutoulas_Pumpkin_Festival).txt  224._Το_Σχέδιο_Αυνάν_(Special_Guest_Maria_Papacosta_Live_Cyprus_Comedy_Festival).txt  225._Το_πρώτο_αυτοκίνητο_στην_Κύπρο.txt  226._Hulk_Hogan_(Part_1_of_2).txt  227._Hulk_Hogan_part_2_of_2_(Special_Guest_Aristotelis_Rigas).txt  228._Holiday_Special_Part_1_(Special_guests_Zacharias_Zanettou_Champis).txt  229._Jefferey_Epstein_Part_2_(Guests_Zacharias_Zanettou_Champis).txt  230._Οι_γυναίκες_που_τόλμησαν_να_τρέξουν_(Special_Guests_Rock_Island_Events).txt  231._Best_of_2025.txt  232._Ποιος_ήταν_ο_Neo.txt  235._Η_τουλιπομανία_του_1637.txt  236._Οι_γυναίκες_επιστρέφουν.txt  236._Οι_γυναίκες_που_γέννησαν_τον_πόνο_(feat._Birth_Forward).txt  239._Σέκτες_Η_τρομοκρατία_της_Aum_Shinrikyo.txt  (+275 more)
(+302 files in other folders)
