[project]
name = "historicon"
version = "0.1.0"
description = "Greek podcast RAG agent with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.1",
    "fastmcp>=3.0.0",
    "uvicorn>=0.27.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "deepgram-sdk>=3.0.0",
    "pydub>=0.25.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "mlx-whisper>=0.4.3",
    "silero-vad>=6.2.0",
    "torchcodec>=0.10.0",
    "transformers>=5.2.0",
    "pysbd>=0.3.4",
    "librosa>=0.11.0",
    "fastapi>=0.136.1",
    "httpx[asyncio]>=0.28.1",
    # OpenTelemetry
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-httpx>=0.45.0",
    "opentelemetry-instrumentation-requests>=0.45.0",
    "opentelemetry-instrumentation-starlette>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pydantic-evals>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.coverage.run]
source = ["agents"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
